clean neadless newline in text; load ua, header file; code clean

--- a/history.txt
+++ b/history.txt
@@ -885,3 +885,361 @@ gregoire_courtine_the_paralyzed_rat_that_walked
 del_harvey_the_strangeness_of_scale_at_twitter
 erika_gregory_the_world_doesn_t_need_more_nuclear_weapons
 hugo_mercier_how_can_you_change_someone_s_mind
+pavan_sukhdev_what_s_the_price_of_nature
+jonathan_drori_why_we_re_storing_billions_of_seeds
+peter_diamandis_on_stephen_hawking_in_zero_g
+maya_beiser_s_and_her_cello_s
+murray_gell_mann_on_beauty_and_truth_in_physics
+jonathan_zittrain_the_web_is_a_random_act_of_kindness
+chris_burkard_the_joy_of_surfing_in_ice_cold_water
+barat_ali_batoor_my_desperate_journey_with_a_human_smuggler
+martin_rees_can_we_prevent_the_end_of_the_world
+samantha_nutt_the_real_harm_of_the_global_arms_trade
+mark_applebaum_the_mad_scientist_of_music
+moshe_safdie_on_building_uniqueness
+eric_giler_demos_wireless_electricity
+hans_rosling_religions_and_babies
+rory_stewart_time_to_end_the_war_in_afghanistan
+dave_debronkart_meet_e_patient_dave
+mike_biddle
+rob_dunbar
+aaron_koblin
+eva_vertes_looks_to_the_future_of_medicine
+newton_aduaka_tells_the_story_of_ezra
+ian_ritchie_the_day_i_turned_down_tim_berners_lee
+eve_ensler
+george_ayittey_on_cheetahs_vs_hippos
+evan_williams_on_listening_to_twitter_users
+thomas_barnett_draws_a_new_map_for_peace
+avi_rubin_all_your_devices_can_be_hacked
+paul_bloom_the_origins_of_pleasure
+cary_fowler_one_seed_at_a_time_protecting_the_future_of_food
+shilo_shiv_suleman_using_tech_to_enable_dreaming
+astonishing_performance_by_a_venezuelan_youth_orchestra_1
+natalie_jeremijenko_the_art_of_the_eco_mindshift
+malcolm_gladwell
+monika_bulaj_the_hidden_light_of_afghanistan
+mathieu_lehanneur_demos_science_inspired_design
+eric_topol_the_wireless_future_of_medicine
+joe_derisi_hunts_the_next_killer_virus
+wayne_mcgregor_a_choreographer_s_creative_process_in_real_time
+tom_shannon_the_painter_and_the_pendulum
+elizabeth_lindsey_curating_humanity_s_heritage
+jeff_hancock_3_types_of_digital_lies
+hannah_fry_is_life_really_that_complex
+catarina_mota_play_with_smart_materials
+diebedo_francis_kere_how_to_build_with_clay_and_community
+molly_stevens_a_new_way_to_grow_bone
+keren_elazari_hackers_the_internet_s_immune_system
+deborah_gordon_what_ants_teach_us_about_the_brain_cancer_and_the_internet
+rupal_patel_synthetic_voices_as_unique_as_fingerprints
+simon_anholt_which_country_does_the_most_good_for_the_world
+leana_wen_what_your_doctor_won_t_disclose
+ge_wang_the_diy_orchestra_of_the_future
+fei_fei_li_how_we_re_teaching_computers_to_understand_pictures
+greg_gage_how_to_control_someone_else_s_arm_with_your_brain
+tabetha_boyajian_the_most_mysterious_star_in_the_universe
+mileha_soneji_simple_hacks_for_life_with_parkinson_s
+mary_bassett_why_your_doctor_should_care_about_social_justice
+joshua_prager_wisdom_from_great_writers_on_every_year_of_life
+serena_williams_gayle_king_on_tennis_love_and_motherhood
+amy_green_a_video_game_to_cope_with_grief
+daniel_engber_how_the_progress_bar_keeps_you_sane
+joelle_rabow_maletis_the_psychology_of_post_traumatic_stress_disorder
+ramesh_raskar_a_camera_that_takes_one_trillion_frames_per_second
+baba_shiv_sometimes_it_s_good_to_give_up_the_driver_s_seat
+ethan_zuckerman
+hans_rosling_asia_s_rise_how_and_when
+stefana_broadbent_how_the_internet_enables_intimacy
+raghava_kk_what_s_your_200_year_plan
+diana_laufenberg_3_ways_to_teach
+damon_horowitz_philosophy_in_prison
+simon_lewis_don_t_take_consciousness_for_granted
+martin_hanczyc_the_line_between_life_and_not_life
+pw_singer_on_robots_of_war
+ivan_oransky_are_we_over_medicalized
+alan_siegel_let_s_simplify_legal_jargon
+laura_carstensen_older_people_are_happier
+fiorenzo_omenetto_silk_the_ancient_material_of_the_future
+steve_keil_a_manifesto_for_play_for_bulgaria_and_beyond
+carmen_agra_deedy_spins_stories
+paola_antonelli_treats_design_as_art
+chade_meng_tan_everyday_compassion_at_google
+rives_controls_the_internet
+james_balog_time_lapse_proof_of_extreme_ice_loss
+robin_chase_excuse_me_may_i_rent_your_car
+miguel_nicolelis_a_monkey_that_controls_a_robot_with_its_thoughts_no_really
+alessandro_acquisti_why_privacy_matters
+steve_howard_let_s_go_all_in_on_selling_sustainability
+robin_nagle_what_i_discovered_in_new_york_city_trash
+adam_spencer_why_i_fell_in_love_with_monster_prime_numbers
+juliana_rotich_meet_brck_internet_access_built_for_africa
+stuart_firestein_the_pursuit_of_ignorance
+two_young_scientists_break_down_plastics_with_bacteria
+roberto_d_angelo_francesca_fedeli_in_our_baby_s_illness_a_life_lesson
+jeremy_kasdin_the_flower_shaped_starshade_that_might_help_us_detect_earth_like_planets
+henry_evans_and_chad_jenkins_meet_the_robots_for_humanity
+nizar_ibrahim_how_we_unearthed_the_spinosaurus
+alison_killing_what_happens_when_a_city_runs_out_of_room_for_its_dead
+jonathan_tepperman_the_risky_politics_of_progress
+christopher_bell_bring_on_the_female_superheroes
+sinead_burke_why_design_should_include_everyone
+duarte_geraldino_what_we_re_missing_in_the_debate_about_immigration
+nadine_hachach_haram_how_augmented_reality_could_change_the_future_of_surgery
+dan_phillips_creative_houses_from_reclaimed_stuff
+john_gerzema_the_post_crisis_consumer
+clay_shirky_how_cellphones_twitter_facebook_can_make_history
+dan_meyer_math_curriculum_makeover
+johnny_lee_demos_wii_remote_hacks
+jennifer_8_lee_looks_for_general_tso
+luis_von_ahn_massive_scale_online_collaboration
+nandan_nilekani_s_ideas_for_india_s_future
+stephen_petranek_counts_down_to_armageddon
+al_gore_s_new_thinking_on_the_climate_crisis
+bruce_schneier
+eddi_reader_sings_kiteflyer_s_hill
+willie_smits_restores_a_rainforest
+teenaged_boy_wonders_play_bluegrass
+catherine_mohr_surgery_s_past_present_and_robotic_future
+srdja_popovic_how_to_topple_a_dictator
+swami_dayananda_saraswati
+daniel_susskind_3_myths_about_the_future_of_work_and_why_they_re_not_true
+deborah_willis_and_hank_willis_thomas_a_mother_and_son_united_by_love_and_art
+eleanor_nelsen_would_you_sacrifice_one_person_to_save_five
+michael_shermer_the_pattern_behind_self_deception
+rory_sutherland_perspective_is_everything
+roger_ebert_remaking_my_voice
+rives_reinventing_the_encyclopedia_game
+joshua_walters_on_being_just_crazy_enough
+shekhar_kapur_we_are_the_stories_we_tell_ourselves
+jessa_gamble_how_to_sleep
+alison_killing_there_s_a_better_way_to_die_and_architecture_can_help
+sarah_jones_one_woman_five_characters_and_a_sex_lesson_from_the_future
+aspen_baker_a_better_way_to_talk_about_abortion
+rich_benjamin_my_road_trip_through_the_whitest_towns_in_america
+joseph_ravenell_how_barbershops_can_keep_men_healthy
+el_seed_a_project_of_peace_painted_across_50_buildings
+james_green_3_moons_and_a_planet_that_could_have_alien_life
+brittney_cooper_the_racial_politics_of_time
+zubaida_bai_a_simple_birth_kit_for_mothers_in_the_developing_world
+marlon_peterson_am_i_not_human_a_call_for_criminal_justice_reform
+naomi_mcdougall_jones_what_it_s_like_to_be_a_woman_in_hollywood
+anna_heringer_the_warmth_and_wisdom_of_mud_buildings
+david_pogue_says_simplicity_sells
+peter_saul_let_s_talk_about_dying
+alisa_miller_shares_the_news_about_the_news
+the_lxd_in_the_internet_age_dance_evolves
+boaz_almog_levitates_a_superconductor
+miwa_matreyek_s_glorious_visions
+daphne_koller_what_we_re_learning_from_online_education
+misha_glenny_investigates_global_crime_networks
+erik_johansson_impossible_photography
+michael_shermer_on_believing_strange_things
+thomas_heatherwick
+joseph_nye_on_global_power_shifts
+david_hoffman_on_losing_everything
+barry_schwartz_using_our_practical_wisdom
+isaac_mizrahi_on_fashion_and_creativity
+stefan_sagmeister_the_power_of_time_off
+jody_williams_a_realistic_vision_for_world_peace
+rabbi_lord_jonathan_sacks_how_we_can_face_the_future_without_fear_together
+atul_gawande_want_to_get_great_at_something_get_a_coach
+amar_inamdar_the_thrilling_potential_for_off_grid_solar_energy
+chris_a_kniesly_history_through_the_eyes_of_a_chicken
+simon_sinek_how_great_leaders_inspire_action
+joel_levine
+temple_grandin_the_world_needs_all_kinds_of_minds
+sugata_mitra_shows_how_kids_teach_themselves
+adora_svitak
+tom_wujec_build_a_tower
+richard_st_john_s_8_secrets_of_success
+laurie_santos
+alain_de_botton_a_kinder_gentler_philosophy_of_success
+david_kelley_on_human_centered_design
+siegfried_woldhek_shows_how_he_found_the_true_face_of_leonardo
+chris_jordan_pictures_some_shocking_stats
+daniel_kahneman_the_riddle_of_experience_vs_memory
+itay_talgam_lead_like_the_great_conductors
+amy_smith_shares_simple_lifesaving_design
+hans_rosling_at_state
+stephen_hawking_asks_big_questions_about_the_universe
+aubrey_de_grey_says_we_can_avoid_aging
+david_griffin_on_how_photography_connects
+david_s_rose_on_pitching_to_vcs
+vijay_kumar_robots_that_fly_and_cooperate
+eli_pariser_beware_online_filter_bubbles
+denis_dutton_a_darwinian_theory_of_beauty
+ze_frank_s_nerdcore_comedy
+tony_buffington_why_do_cats_act_so_weird
+elizabeth_blackburn_the_science_of_cells_that_never_get_old
+justin_baldoni_why_i_m_done_trying_to_be_man_enough
+dan_gartenberg_the_brain_benefits_of_deep_sleep_and_how_to_get_more_of_it
+sara_menker_a_global_food_crisis_may_be_only_a_decade_away
+paul_tasner_how_i_became_an_entrepreneur_at_66
+grace_kim_how_cohousing_can_make_us_happier_and_live_longer
+joseph_redmon_how_a_computer_learns_to_recognize_objects_instantly
+amit_sood_every_piece_of_art_you_ve_ever_wanted_to_see_up_close_and_searchable
+grady_booch_don_t_fear_superintelligence
+aparna_mehta_where_do_your_online_returns_go
+melinda_epler_3_ways_to_advocate_for_a_more_inclusive_workplace
+alex_honnold_how_i_climbed_a_3_000_foot_vertical_cliff_without_ropes
+alex_edmans_what_to_trust_in_a_post_truth_world
+balsher_singh_sidhu_are_we_running_out_of_clean_water
+carla_harris_how_to_find_the_person_who_can_help_you_get_ahead_at_work
+graham_allison_is_war_between_china_and_the_us_inevitable
+dolly_chugh_how_to_let_go_of_being_a_good_person_and_become_a_better_person
+alexander_belcredi_how_a_long_forgotten_virus_could_help_us_solve_the_antibiotics_crisis
+tamekia_mizladi_smith_how_to_train_employees_to_have_difficult_conversations
+burcin_mutlu_pakdil_a_rare_galaxy_that_s_challenging_our_understanding_of_the_universe
+hasini_jayatilaka_how_cancer_cells_communicate_and_how_we_can_slow_them_down
+tina_seelig_the_little_risks_you_can_take_to_increase_your_luck
+mary_maker_why_educating_refugees_matters
+kashmir_hill_and_surya_mattu_what_your_smart_devices_know_and_share_about_you
+lucy_marcil_why_doctors_are_offering_free_tax_prep_in_their_waiting_rooms
+christina_wallace_how_to_stop_swiping_and_find_your_person_on_dating_apps
+christoph_niemann_you_are_fluent_in_this_language_and_don_t_even_know_it
+kaitlyn_sadtler_how_we_could_teach_our_bodies_to_heal_faster
+ashwini_anburajan_how_cryptocurrency_can_help_new_companies_get_investment_capital
+ghada_wali_how_i_m_using_lego_to_teach_arabic
+jessica_pryce_to_transform_child_welfare_take_race_out_of_the_equation
+benedetta_berti_did_the_global_response_to_9_11_make_us_safer
+catherine_mohr_how_i_became_part_sea_urchin
+gina_cooke_why_is_there_a_b_in_doubt
+kamal_meattle_on_how_to_grow_your_own_fresh_air
+stephen_petranek_your_kids_might_live_on_mars_here_s_how_they_ll_survive
+aditi_gupta_a_taboo_free_way_to_talk_about_periods
+michael_metcalfe_a_provocative_way_to_finance_the_fight_against_climate_change
+jim_hemerling_5_ways_to_lead_in_an_era_of_constant_change
+zeynep_tufekci_machine_intelligence_makes_human_morals_more_important
+bettina_warburg_how_the_blockchain_will_radically_transform_the_economy
+roger_antonsen_math_is_the_hidden_secret_to_understanding_the_world
+dan_gross_why_gun_violence_can_t_be_our_new_normal
+patricia_medici_the_coolest_animal_you_know_nothing_about_and_how_we_can_save_it
+sangeeta_bhatia_this_tiny_particle_could_roam_your_body_to_find_tumors
+sarah_murray_a_playful_solution_to_the_housing_crisis
+lb_hannahs_what_it_s_like_to_be_a_transgender_dad
+graham_shaw_why_people_believe_they_can_t_draw
+priya_vulchi_and_winona_guo_what_it_takes_to_be_racially_literate
+yasin_kakande_what_s_missing_in_the_global_debate_over_refugees
+emily_levine_how_i_made_friends_with_reality
+ingrid_fetell_lee_where_joy_hides_and_how_to_find_it
+poppy_crum_technology_that_knows_what_you_re_feeling
+teresa_njoroge_what_i_learned_serving_time_for_a_crime_i_didn_t_commit
+kristie_overstreet_phd_why_are_many_doctors_scared_of_transgender_patients
+tracee_ellis_ross_a_woman_s_fury_holds_lifetimes_of_wisdom
+dylan_marron_how_i_turn_negative_online_comments_into_positive_offline_conversations
+kirsty_duncan_scientists_must_be_free_to_learn_to_speak_and_to_challenge
+isabel_wilkerson_the_great_migration_and_the_power_of_a_single_decision
+tiffany_kagure_mugo_and_siphumeze_khundayi_how_to_have_a_healthier_positive_relationship_to_sex
+matt_goldman_the_search_for_aha_moments
+paul_rucker_how_my_mom_inspired_my_approach_to_the_cello
+kelly_richmond_pope_how_whistle_blowers_shape_history
+tim_harford_a_powerful_way_to_unleash_your_natural_creativity
+ian_firth_bridges_should_be_beautiful
+peter_eigen_how_to_expose_the_corrupt
+lz_granderson_the_myth_of_the_gay_agenda
+mae_jemison_on_teaching_arts_and_sciences_together
+ben_saunders_skis_to_the_north_pole
+robin_chase_on_zipcar_and_her_next_big_idea
+ben_saunders_why_bother_leaving_the_house
+arthur_benjamin_s_formula_for_changing_math_education
+susan_savage_rumbaugh_on_apes_that_write
+jane_fonda_life_s_third_act
+frans_lanting_s_lyrical_nature_photos
+ben_goldacre_what_doctors_don_t_know_about_the_drugs_they_prescribe
+amy_cuddy_your_body_language_shapes_who_you_are
+beau_lotto_amy_o_toole_science_is_for_everyone_kids_included
+cameron_russell_looks_aren_t_everything_believe_me_i_m_a_model
+mitch_resnick_let_s_teach_kids_to_code
+cesar_kuriyama_one_second_every_day
+james_b_glattfelder_who_controls_the_world
+alan_russell_on_regenerating_our_bodies
+tim_brown_urges_designers_to_think_big
+david_keith_s_surprising_ideas_on_climate_change
+camille_seaman_haunting_photos_of_ice
+shlomo_benartzi_saving_more_tomorrow
+george_smoot_on_the_design_of_the_universe
+michael_shellenberger_how_fear_of_nuclear_power_is_hurting_the_environment
+abigail_marsh_why_some_people_are_more_altruistic_than_others
+nadia_lopez_why_open_a_school_to_close_a_prison
+j_d_vance_america_s_forgotten_working_class
+neri_oxman_design_at_the_intersection_of_technology_and_biology
+alyson_mcgregor_why_medicine_often_has_dangerous_side_effects_for_women
+elizabeth_cawein_we_built_this_city_on_a_bold_music_identity
+prosanta_chakrabarty_four_billion_years_of_evolution_in_six_minutes
+essam_daod_how_we_can_bring_mental_health_support_to_refugees
+sunni_patterson_wild_women
+paul_nicklen_tales_of_ice_bound_wonderlands
+quixotic_fusion_dancing_with_light
+james_nachtwey_s_searing_pictures_of_war
+ngozi_okonjo_iweala_on_doing_business_in_africa
+natalie_merchant_sings_old_poems_to_life
+arthur_ganson_makes_moving_sculpture
+deb_roy_the_birth_of_a_word
+allan_savory_how_to_green_the_world_s_deserts_and_reverse_climate_change
+honor_harger_a_history_of_the_universe_in_sound
+cynthia_kenyon_experiments_that_hint_of_longer_lives
+young_ha_kim_be_an_artist_right_now
+thomas_suarez_a_12_year_old_app_developer
+garth_lenz_images_of_beauty_and_devastation
+daniel_goleman_on_compassion
+allan_jones_a_map_of_the_brain
+daniel_schnitzer_inventing_is_the_easy_part
+faith_jegede_what_i_ve_learned_from_my_autistic_brothers
+edith_widder_how_we_found_the_giant_squid
+amos_winter_the_cheap_all_terrain_wheelchair
+daniel_libeskind_s_17_words_of_architectural_inspiration
+adrian_paenza_how_folding_paper_can_get_you_to_the_moon
+christopher_warner_situational_irony_the_opposite_of_what_you_think
+jessica_green_and_karen_guillemin_you_are_your_microbes
+caroline_weaver_why_the_pencil_is_perfect
+paul_romer_the_world_s_first_charter_city
+susan_shaw_the_oil_spill_s_toxic_trade_off
+charity_tilleman_dick_singing_after_a_double_lung_transplant
+sharmeen_obaid_chinoy_inside_a_school_for_suicide_bombers
+richard_resnick_welcome_to_the_genomic_revolution
+tom_rielly_delivers_a_comic_send_up_of_ted2006
+andrew_connolly_what_s_the_next_window_into_our_universe
+jonas_gahr_store_in_defense_of_dialogue
+will_potter_the_shocking_move_to_criminalize_non_violent_protest
+karen_tse_how_to_stop_torture
+gary_lauder_s_new_traffic_sign_take_turns
+barbara_block_tagging_tuna_in_the_deep_ocean
+kary_mullis_next_gen_cure_for_killer_infections
+nicholas_negroponte_takes_olpc_to_colombia
+christophe_adami_finding_life_we_can_t_imagine
+john_delaney_wiring_an_interactive_ocean
+kevin_surace_fixing_drywall_to_heal_the_planet
+adam_davidson_what_we_learned_from_teetering_on_the_fiscal_cliff
+david_binder_the_arts_festival_revolution
+gayle_tzemach_lemmon_meet_the_first_women_to_fight_on_the_front_lines_of_an_american_war
+vinay_venkatraman_technology_crafts_for_the_digitally_underserved
+jackson_browne_if_i_could_be_anywhere
+nadia_al_sakkaf_see_yemen_through_my_eyes
+danny_hillis_back_to_the_future_of_1994
+marian_bantjes_intricate_beauty_by_design
+bandi_mbubi_demand_a_fair_trade_cell_phone
+eddy_cartaya_my_glacier_cave_discoveries
+aakash_odedra_a_dance_in_a_hurricane_of_paper_wind_and_light
+robert_wright_the_evolution_of_compassion
+todd_kuiken_a_prosthetic_arm_that_feels
+jonathan_drori_the_beautiful_tricks_of_flowers
+marco_tempest_the_electric_rise_and_fall_of_nikola_tesla
+caroline_phillips_hurdy_gurdy_for_beginners
+elizabeth_lesser_take_the_other_to_lunch
+abe_davis_new_video_technology_that_reveals_an_object_s_hidden_properties
+manu_prakash_a_50_cent_microscope_that_folds_like_origami
+alice_rawsthorn_pirates_nurses_and_other_rebel_designers
+john_hockenberry_we_are_all_designers
+rives_remixes_ted2006
+steve_jurvetson_on_model_rocketry
+david_rockwell_builds_at_ground_zero
+nancy_frates_why_my_family_started_the_als_ice_bucket_challenge_the_rest_is_history
+oren_yakobovich_hidden_cameras_that_film_injustice_in_the_world_s_most_dangerous_places
+hilary_cottam_social_services_are_broken_how_we_can_fix_them
+marco_tempest_maybe_the_best_robot_demo_ever
+mohamed_ali_the_link_between_unemployment_and_terrorism
+alan_kay_shares_a_powerful_idea_about_ideas
+mohamed_hijri_a_simple_solution_to_the_coming_phosphorus_crisis
+beatrice_coron_stories_cut_from_paper
+afra_raymond_three_myths_about_corruption
