Get more meta data to perfect output markdown.

--- a/[2018].宇宙中最小的物质是什么.TED-Ed.md
+++ b/[2018].宇宙中最小的物质是什么.TED-Ed.md
@@ -3,72 +3,38 @@ title: '宇宙中最小的物质是什么？'
 speaker:
 - Jonathan Butterworth
 date: November 2018
-abstract: |
-  如果拿一个日常的物品，比如一个咖啡杯，把它切成两半，然后再切成一半，之后继续切，什么时候才会结束？你会一直继续下去吗？或者你是否会最终找到一套组成万事万物的不可分割的“积木块”？乔纳森.巴特沃斯解析了标准模型理论以及这个理论如何能让我们更加了解我们的世界。
-  课程讲解：乔纳森.巴特沃斯
-  动画制作：尼克·希迪克
+event: TED2018
+abstract: 如果拿一个日常的物品，比如一个咖啡杯，把它切成两半，然后再切成一半，之后继续切，什么时候才会结束？你会一直继续下去吗？或者你是否会最终找到一套组成万事万物的不可分割的“积木块”？乔纳森.巴特沃斯解析了标准模型理论以及这个理论如何能让我们更加了解我们的世界。课程讲解：乔纳森.巴特沃斯，动画制作：尼克·希迪克
+duration: 1137.0
 views: 226,166
+comments: 8
 tags: [TED-Ed, physics, science]
 rated: [Fascinating, Informative]
 lang: zh-cn
 talk: jonathan_butterworth_what_s_the_smallest_thing_in_the_universe
-link: 'https://www.ted.com/talks/jonathan_butterworth_what_s_the_smallest_thing_in_the_universe'
+link: https://www.ted.com/talks/jonathan_butterworth_what_s_the_smallest_thing_in_the_universe
 ---
 
 ##### November 2018 - Jonathan Butterworth
-# 宇宙中最小的物质是什么？
+# [宇宙中最小的物质是什么？](https://www.ted.com/talks/jonathan_butterworth_what_s_the_smallest_thing_in_the_universe)
+阅读数：226,166 | 话题：TED-Ed  physics  science | 印象：Fascinating  Informative
 
 ![](https://pi.tedcdn.com/r/s3.amazonaws.com/talkstar-photos/uploads/0212933e-85f9-4b08-9a71-f091ec75d128/standardmodel_textless1.jpg?op=%5E&c=1280%2C720&gravity=t&u%5Br%5D=2&u%5Bs%5D=0.5&u%5Ba%5D=0.8&u%5Bt%5D=0.03&quality=82&w=1280&h=720)
 
-如果拿一个日常的物品，比如一个咖啡杯，把它切成两半，然后再切成一半，之后继续切，什么时候才会结束？你会一直继续下去吗？你会不会找到一套不可以被分割的“积木块”，万事万物都可由其组成？物理学家们已经发现了后者——物质是由基础的粒子组成，这些粒子是宇宙里最微小的东西。这些粒子互相作用，遵循一种“标准模型“理论。
+> 如果拿一个日常的物品，比如一个咖啡杯，把它切成两半，然后再切成一半，之后继续切，什么时候才会结束？你会一直继续下去吗？或者你是否会最终找到一套组成万事万物的不可分割的“积木块”？乔纳森.巴特沃斯解析了标准模型理论以及这个理论如何能让我们更加了解我们的世界。
 
-> If you were to take any everyday object, say a coffee cup, and break it in half, then in half again, and keep carrying on, where would you end up? Could you keep on going forever? Or would you find a set of indivisible building blocks out of which everything is made? Physicists have found the latter- that matter is made of fundamental particles, the smallest things in the universe. Particles interact with each other according to a theory called the “Standard Model”.
+|原文|翻译|
+| --------------- | :----------------------------- |
+| If you were to take any everyday object, say a coffee cup, and break it in half, then in half again, and keep carrying on, where would you end up? Could you keep on going forever? Or would you find a set of indivisible building blocks out of which everything is made? Physicists have found the latter- that matter is made of fundamental particles, the smallest things in the universe. Particles interact with each other according to a theory called the “Standard Model”.  |如果拿一个日常的物品，比如一个咖啡杯，把它切成两半，然后再切成一半，之后继续切，什么时候才会结束？你会一直继续下去吗？你会不会找到一套不可以被分割的“积木块”，万事万物都可由其组成？物理学家们已经发现了后者——物质是由基础的粒子组成，这些粒子是宇宙里最微小的东西。这些粒子互相作用，遵循一种“标准模型“理论。 |
+| The Standard Model is a remarkably elegant encapsulation of the strange quantum world of indivisible, infinitely small particles. It also covers the forces that govern how particles move, interact, and bind together to give shape to the world around us. |标准模型是对不可分割的、无限小的粒子的量子世界的提炼。它也包含了力如何引导粒子运动、相互作用、以及结合在一起形成世间万物。 |
+| So how does it work? | 那么它是怎么工作的呢？|
 
-标准模型是对不可分割的、无限小的粒子的量子世界的提炼。它也包含了力如何引导粒子运动、相互作用、以及结合在一起形成世间万物。
+> [**主讲人**]()：Inventor Anirudh Sharma is the founder of Graviky Labs, an MIT Media Labs spinoff.
 
-> The Standard Model is a remarkably elegant encapsulation of the strange quantum world of indivisible, infinitely small particles. It also covers the forces that govern how particles move, interact, and bind together to give shape to the world around us.
 
-那么它是怎么工作的呢？
 
-> So how does it work?
-
-放大杯子上的碎片，我们看到原子聚集在一起形成分子。一个分子是任何化合物中的最小组成单元。一个原子是任何元素周期表中元素的最小组成单元。
-
-> Zooming in on the fragments of the cup, we see molecules, made of atoms bound up together. A molecule is the smallest unit of any chemical compound. An atom is the smallest unit of any element in the periodic table.
-
-但是原子不是物质最小的组成单元。实验发现每一个原子都有微小的、密实的原子核，原子核被极小的电子云包围着。正如我们所知，电子是宇宙中基础的、不可分割的基础材料之一。它是第一个被发现的标准模型粒子。电子通过电磁场聚集在原子核周围。它们通过交换一种叫做光子的粒子来互相吸引，光子是带着电磁场力的光量子，电磁场力是标准模型的基础力。
-
-> But the atom is not the smallest unit of matter. Experiments found that each atom has a tiny, dense nucleus, surrounded by a cloud of even tinier electrons. The electron is, as far as we know, one of the fundamental, indivisible building blocks of the universe. It was the first Standard Model particle ever discovered. Electrons are bound to an atom’s nucleus by electromagnetism. They attract each other by exchanging particles called photons, which are quanta of light that carry the electromagnetic force, one of the fundamental forces of the Standard Model.
-
-原子核有更多的秘密需要被发现，它包含了光子和中子。虽然它曾被认为是最基础的粒子，但是在1968年物理学家发现光子和中子是由夸克组成，而夸克是不可分割的。一个光子包含两个上夸克和一个下夸克。一个中子包含两个上夸克和一个下夸克。
-
-> The nucleus has more secrets to reveal, as it contains protons and neutrons. Though once thought to be fundamental particles on their own, in 1968 physicists found that protons and neutrons are actually made of quarks, which are indivisible. A proton contains two “up” quarks and one “down” quark. A neutron contains two down quarks and one up.
-
-原子核被强力凝聚在一起，这是标准模型的另一个基础力。正如光子带着电磁场力，一个叫胶子的粒子带着强力。似乎电子与上下夸克一起就是我们所需构建原子的东西，进而来描述一般的物质。然而，高能量实验揭露实际上有六种夸克：上和下，粲和奇，底和顶，它们数量巨大。正如我们发现电子，电子有重同类元素叫介子和钛。为什么对于这些粒子来说，有三种（只有三种）不同的版本？这仍是一个谜。
-
-> The nucleus is held together by the strong force, another fundamental force of the Standard Model. Just as photons carry the electromagnetic force, particles called gluons carry the strong force. Electrons, together with up and down quarks, seem to be all we need to build atoms and therefore describe normal matter. However, high energy experiments reveal that there are actually six quarks– down &amp; up, strange &amp; charm, and bottom &amp; top - and they come in a wide range of masses. The same was found for electrons, which have heavier siblings called the muon and the tau. Why are there three (and only three) different versions of each of these particles? This remains a mystery.
-
-这些重粒子只是在非常短的片刻产生，它们只产生于高能量的碰撞中，而不出现在日常生活中。这是因为它们会非常快地衰减回较轻的粒子。
-
-> These heavy particles are only produced, for very brief moments, in high energy collisions, and are not seen in everyday life. This is because they decay very quickly into the lighter particles.
-
-这些衰减包含在力的交换和粒子运载，它们被称为W和Z——不像光子——有质量。它们带有弱力，这是标准模型中的最后的力。相同的力允许光子和中子互相转换，一个驱动太阳的重要融合反应。为了直接观察W和Z，我们需要通过粒子加速度器产生高能量碰撞。
-
-> Such decays involve the exchange of force-carrying particles, called the W and Z, which – unlike the photon – have mass. They carry the weak force, the final force of the Standard Model. This same force allows protons and neutrons to transform into each other, a vital part of the fusion interactions that drive the Sun. To observe the W and Z directly, we needed the high energy collisions provided by particle accelerators.
-
-有另一种标准模型粒子，称为中微子。它们只通过弱力互相作用。通过太阳，产生数万亿的中微子，每一秒在我们身边飞过。我们通过弱力相互作用的方法发现有不同种类的中微子它们与电子、介子和钛关联。
-
-> There’s another kind of Standard Model particle, called neutrinos. These only interact with other particles through the weak force. Trillions of neutrinos, many generated by the sun, fly through us every second. Measurements of weak interactions found that there are different kinds of neutrinos associated with the electron, muon, and tau.
-
-所有这些粒子都存在相对应的反物质，这些粒子有相反的极性但是其他方面一样。物质和反物质是在高能量碰撞中成对产生的，当它们相遇时互相抵消。
-
-> All these particles also have antimatter versions, which have the opposite charge but are otherwise identical. Matter and antimatter particles are produced in pairs in high-energy collisions, and they annihilate each other when they meet.
-
-标准模型中的最后一种粒子是希格斯粒子——一种宇宙中能量域背景的量子波。正如标准模型所说，这个领域的相互反应就是基础物质粒子如何获取质量的。大强子对撞机上做的超环面仪器实验就是在深入学习标准模型。通过精准测度组成宇宙的粒子和力，超环面仪器物理学家可以找到无法用标准模型解释的未解之谜的答案。
-
-> The final particle of the Standard Model is the Higgs boson – a quantum ripple in the background energy field of the universe. Interacting with this field is how all the fundamental matter particles acquire mass, according to the Standard Model. The ATLAS Experiment on the Large Hadron Collider is studying the Standard Model in-depth. By taking precise measurements of the particles and forces that make up the universe, ATLAS physicists can look for answers to mysteries not explained by the Standard Model.
-
-例如：重力如何嵌入模型？什么是承载力和物质粒子之间的真正关系？我们如何描述组成宇宙中大部分物质但是仍未被观测到的“黑物质”？虽然标准模型对我们周围的世界提供了很好的解释，宇宙中仍存在众多谜题等待着探索。
-
-> For example, how does gravity fit in? What is the real relationship between force carriers and matter particles? How can we describe “Dark Matter”, which makes up most of the mass in the universe but remains unaccounted for? While the Standard Model provides a beautiful explanation for the world around us, there is still a universe’s worth of mysteries left to explore.
+##### 相关演讲：
+1. [The disarming case to act right now on climate change](greta_thunberg_the_disarming_case_to_act_right_now_on_climate) - Greta Thunberg
+2. [A new way to remove CO2 from the atmosphere]() - Jennifer Wilcox
+3. 
 
